--- a/frontend/src/styles/_config.scss
+++ b/frontend/src/styles/_config.scss
@@ -14,3 +14,4 @@ $sidebar-nav-mobile-height: 80px;
 $breakpoint-tablet-width: 800px;
 $breakpoint-tablet-width-medium: 720px;
 $breakpoint-tablet-width-small: 640px;
+$breakpoint-mobile-width-large: 600px;
