--- a/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.scss
+++ b/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.scss
@@ -1,9 +1,12 @@
 @import '/src/styles/config';
 @import '/src/styles/utilities';
 
+.top-container-background-dim{
+  --form-margin-size: 56px;
+  --form-container-relative-width: 80%;
+}
 
 $controls-bar-height: 110px;
-$form-margin-size: 56px;
 $form-transition-duration: 0.35s;
 
 /* TODO - refine active/inactive */
@@ -49,7 +52,7 @@ $form-transition-duration: 0.35s;
 
   max-height: 100vh;
 
-  width: 80%;
+  width: var(--form-container-relative-width);
   max-width: 719px;
 
   margin-right: 300px;
@@ -79,12 +82,12 @@ $form-transition-duration: 0.35s;
  
 .form-container form{
   width: 100%;
-  max-width: 80%;
+  max-width: var(--form-container-relative-width);
 
-  margin-left: $form-margin-size;
-  margin-right: $form-margin-size;
+  margin-left: var(--form-margin-size);
+  margin-right: var(--form-margin-size);
 
-  padding-top: $form-margin-size;
+  padding-top: 56px;
 }
 
 .form-container form > header, .form-container > form fieldset{
@@ -142,7 +145,7 @@ $form-transition-duration: 0.35s;
   left: 0;
 
   height: $controls-bar-height;
-  width: 80%;
+  width: var(--form-container-relative-width);
   max-width: 719px;
 
   margin-top: -$controls-bar-height;
@@ -152,7 +155,7 @@ $form-transition-duration: 0.35s;
 
   background-color: white;
 
-  border-top-right-radius: 20px;
+  //border-top-right-radius: 20px;  ??
   border-bottom-right-radius: 20px;
 
   -webkit-box-shadow: 0px 34px 157px 0px rgba(0,0,0,0.21);
@@ -164,11 +167,11 @@ $form-transition-duration: 0.35s;
 }
 
 .controls-flex-container{
-  margin-left: $form-margin-size;
-  margin-right: $form-margin-size;
+  margin-left: var(--form-margin-size);
+  margin-right: var(--form-margin-size);
 
   width: 100%;
-  max-width: 80%;
+  max-width: var(--form-container-relative-width);
 
   height: 100%;
 
@@ -237,8 +240,92 @@ $form-transition-duration: 0.35s;
 }
 
 @media(max-width: $breakpoint-tablet-width){
+
   .form-container{
     padding-top: 56px;
     padding-left: 0;
+  }
+
+  .form-controls-container{
+    padding-left: 0px;
+  }
+}
+
+@media(max-width: $breakpoint-tablet-width-medium){
+  .top-container-background-dim{
+    --form-margin-size: 24px;
+  }
+
+  .form-container{
+    & form{
+      padding-right: 48px;
+      max-width: 100%;
+    }
+  }
+
+  .controls-flex-container{
+    max-width: 100%;
+    
+    margin: 0;
+    padding-left: var(--form-margin-size);
+    padding-right: var(--form-margin-size);
+
+    & button{
+      padding-left: 17px;
+      padding-right: 17px;
+    }
+  }
+}
+
+@media(max-width: $breakpoint-mobile-width-large){
+  .top-container-background-dim{
+    --form-container-relative-width: 100%;
+  }
+
+  .form-controls-container{
+    border-bottom-right-radius: 0;
+  }
+
+  .tripple-column-grid{
+    grid-template-columns: 46% 46%;
+
+    & > *:nth-child(3){
+      grid-column: 1/3;
+    }
+  }
+
+  .invoice-items-list tr:first-child{
+    display: none;
+  }
+
+  .invoice-items-list tr{
+    margin-top: 73px;
+
+    &:first-child{
+      margin-top: 53px;
+    }
+
+    grid-template-columns: 19.57% 30.58% 37.5%;
+    grid-column-gap: 6.12%;
+
+    & > *:first-child{
+      grid-column: 1/4;
+      margin-bottom: 52px; 
+    }
+
+    & td{
+      position: relative;
+
+      &:before{
+        content: attr(data-thead);
+        position: absolute;
+  
+        top: -28px; // font-size + 16px margin
+        left: 0;
+
+        font-size: 12px;
+        color: var(--color-contrast-medium-lighter);
+      }
+    }
   }
 }
