--- a/frontend/src/app/components/pages/invoices-list/components/invoice-brief.component.scss
+++ b/frontend/src/app/components/pages/invoices-list/components/invoice-brief.component.scss
@@ -11,7 +11,7 @@
   padding-left: 32px;
   padding-right: 32px;
 
-  background-color: white;
+  background-color: var(--color-background-light-contrast);
   border-radius: 8px;
   border: solid 1px transparent;
 
