--- a/frontend/src/app/components/layout/navbar/navbar.component.html
+++ b/frontend/src/app/components/layout/navbar/navbar.component.html
@@ -15,7 +15,7 @@
 
 
   <div class="bottom-container">
-    <div class="theme-selector-container">
+    <div (click)="onThemeChange()" class="theme-selector-container">
       <img [src]="'assets/icon-moon.svg'" alt="">
     </div>
     <div class="profile-img-container">
