--- a/frontend/src/app/components/pages/invoice/invoice.component.scss
+++ b/frontend/src/app/components/pages/invoice/invoice.component.scss
@@ -13,7 +13,7 @@
   padding-left: 32px;
   padding-right: 32px;
 
-  background-color: white;
+  background-color: var(--color-background-light-contrast);
   border-radius: 8px;
 
   display: flex;
@@ -41,7 +41,7 @@ article{
   margin-top: 24px;
   padding: 48px;
 
-  background-color: white;
+  background-color: var(--color-background-light-contrast);
   border-radius: 8px;
 }
 
@@ -143,7 +143,7 @@ article{
   padding: 32px;
   padding-bottom: 0;
   
-  background-color: #F9FAFE;
+  background-color: var(--color-accent-4);
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 }
@@ -212,7 +212,7 @@ article{
   align-items: center;
 
   span{
-    color: white;
+    color: var(--color-background-light-contrast);
     font-size: 11px;
   }
 
