--- a/frontend/src/app/components/pages/invoices-list/invoices.list.component.scss
+++ b/frontend/src/app/components/pages/invoices-list/invoices.list.component.scss
@@ -32,6 +32,8 @@
 .no-content-msg-container h3{
   margin-top: 64px;
   font-size: 20px;
+
+  color: var(--color-contrast-dark);
 }
 
 .no-content-msg-container span{
