--- a/frontend/src/styles/_utilities.scss
+++ b/frontend/src/styles/_utilities.scss
@@ -69,7 +69,7 @@
 
 .button-aux{
   color: var(--color-contrast-medium-lighter);
-  background-color: #F9FAFE;
+  background-color: var(--color-accent-4);
 }
 
 .button-danger{
