plug theme select icon;

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <modals-container></modals-container>
 <div id="top-container" class="top-container" [ngClass]="darkThemeEnabled ? 'dark-theme' : 'light-theme'">
-  <app-navbar (themeSelect)="handleThemeChange()"></app-navbar>
+  <app-navbar [isDarkTheme]="darkThemeEnabled" (themeSelect)="handleThemeChange()"></app-navbar>
   <app-page-frame></app-page-frame>
 </div>
