--- a/frontend/src/app/components/layout/navbar/navbar.component.scss
+++ b/frontend/src/app/components/layout/navbar/navbar.component.scss
@@ -102,6 +102,10 @@ nav{
   align-items: center;
 
   background-color: var(--color-accent-3);
+
+  & img{
+    cursor: pointer;
+  }
 }
 
 .profile-img-container{
