dropdown component darkMode fix;

--- a/frontend/src/app/components/shared/inputs/dropdown.component.scss
+++ b/frontend/src/app/components/shared/inputs/dropdown.component.scss
@@ -67,7 +67,7 @@
 
   margin-top: 8px;
 
-  background-color: white;
+  background-color: var(--color-background-light-contrast);
 
   border-radius: 8px;
 
