--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -47,7 +47,7 @@
   --color-contrast-medium: #DFE3FA;
 }
 
-#top-container{
+.layout-container{
   background-color: var(--color-bg-light);
 }
 
@@ -61,7 +61,7 @@ body{
   font-family: $font-stack-primary;
 }
 
-.top-container{
+.layout-container{
   min-height: 100vh;
   width: 100%;
 
@@ -70,7 +70,7 @@ body{
 }
 
 @media(max-width: $breakpoint-tablet-width){
-  .top-container{
+  .layout-container{
     display: flex;
     flex-direction: column;
     align-items: center;
