add pipework for status filtering;

--- a/frontend/src/app/components/pages/invoices-list/components/invoices.header.component.html
+++ b/frontend/src/app/components/pages/invoices-list/components/invoices.header.component.html
@@ -2,11 +2,15 @@
   <div class="content-flex-container">
     <div class="container-flex-left">
       <h1>Invoices</h1>
-      <span class="span-full-width">There are {{invoicesNum}} total invoices</span>
-      <span class="span-short">{{invoicesNum}} invoices</span>
+      <span class="span-full-width"
+        >There are {{ invoicesNum }} total invoices</span
+      >
+      <span class="span-short">{{ invoicesNum }} invoices</span>
     </div>
     <div class="container-flex-right">
-      <selection-popup-menu></selection-popup-menu>
+      <selection-popup-menu
+        [statusFiltersForm]="statusFiltersForm"
+      ></selection-popup-menu>
       <button-hero (clickEmitter)="onAddNew()"></button-hero>
     </div>
   </div>
