fix darkMode styling of login/register; override chrome autofill input styling;

--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -27,7 +27,10 @@
       </div>
 
       <div class="controls-container">
-        <a routerLink="/register">register</a>
+        <a routerLink="/register" class="arrowAnchor">
+          <img src="assets/icon-arrow-left.svg" alt="" />
+          <span>Register</span>
+        </a>
         <button (click)="onLoginSubmit()" class="button button-primary">Login</button>
       </div>
 
