--- a/frontend/src/app/components/pages/login/register.component.html
+++ b/frontend/src/app/components/pages/login/register.component.html
@@ -47,7 +47,10 @@
       </div>
 
       <div class="controls-container">
-        <a routerLink="/login">Login</a>
+        <a routerLink="/login" class="arrowAnchor">
+          <img src="assets/icon-arrow-left.svg" alt="" />
+          <span>Login</span>
+        </a>
         <button (click)="onRegistrationSubmit()" class="button button-primary">Register</button>
       </div>
 
