--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -62,6 +62,14 @@
   padding: 0;
 }
 
+/* Override chrome autofill input style */
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px var(--color-background-light-contrast) inset !important;
+  -webkit-text-fill-color: var(--color-contrast-dark) !important;
+}
+
 body{
   font-family: $font-stack-primary;
 }
