--- a/frontend/src/app/components/shared/options/selection.popup.component.scss
+++ b/frontend/src/app/components/shared/options/selection.popup.component.scss
@@ -18,6 +18,10 @@
   cursor: pointer;
   column-gap: 13px;
 
+  &:hover > .checkbox-icon{
+    border: solid 2px var(--color-primary-main);
+  }
+
   &:not(:last-child){
     margin-bottom: 16px;
   }
@@ -38,6 +42,8 @@
   justify-content: center;
   align-items: center;
 
+  border-radius: 2px;
+
   background-color: var(--color-background-light-contrast-b);
 
   &.checkbox-checked{
@@ -54,6 +60,10 @@
   cursor: pointer;
 
   z-index: 10;
+
+  &:focus > img{
+    transform: rotate(180deg);
+  }
 
   &:focus > .options-container{
     display: block;
