add calendar-style datepicked component;

--- a/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.html
+++ b/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.html
@@ -86,12 +86,12 @@
         </div>
 
         <div class="fields-grid-container dual-column-grid double-margin">
-          <input-field
+          <datepicker-dropdown-field
             label="Invoice Date"
             placeholder="20 Aug 2021"
             controlName="invoiceDate"
           >
-          </input-field>
+          </datepicker-dropdown-field>
           <dropdown-field
             [preselectText]="paymentTermOptions[3].text"
             [options]="paymentTermOptions"
