--- a/frontend/src/app/components/pages/invoice/invoice.component.html
+++ b/frontend/src/app/components/pages/invoice/invoice.component.html
@@ -51,7 +51,7 @@
       <div class="dates-container">
         <div>
           <span class="txt-light">Invoice Date</span>
-          <span class="txt-strong">{{ billTo.invoiceDate }}</span>
+          <span class="txt-strong">{{ invoiceDate }}</span>
         </div>
         <div>
           <span class="txt-light">Payment Due</span>
