fix datepicker current date styling; close datepicker on selection;

--- a/frontend/src/app/components/shared/inputs/datepicker-dropdown.component.scss
+++ b/frontend/src/app/components/shared/inputs/datepicker-dropdown.component.scss
@@ -130,7 +130,7 @@
 }
 
 .date-current{
-  background-color: #141625//lightgray; // TODO
+  background-color: var(--color-datepicker-current-date);
 }
 
 .selected{
