--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -33,6 +33,8 @@
 
   --color-button-aux-active: #DFE3FA;
   --color-button-secondary-active: #0C0E16;
+
+  --color-datepicker-current-date: lightgray;
 }
  
 #top-container.dark-theme{
@@ -57,6 +59,8 @@
 
   --color-button-aux-active: #FFFFFF;
   --color-button-secondary-active: #1E2139;
+
+  --color-datepicker-current-date: #141625;
 }
 
 .layout-container{
