fix datepicker when editing;

--- a/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.html
+++ b/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.html
@@ -90,6 +90,7 @@
             label="Invoice Date"
             placeholder="20 Aug 2021"
             controlName="invoiceDate"
+            [preselectDate]="invoiceDate"
           >
           </datepicker-dropdown-field>
           <dropdown-field
