feat: add error labels to inputs;

--- a/Spa/src/app/components/pages/login/register.component.html
+++ b/Spa/src/app/components/pages/login/register.component.html
@@ -22,6 +22,7 @@
           controlName="email"
           label="Email"
           placeholder="email"
+          type="email"
         >
         </input-field>
       </div>
