--- a/Spa/src/app/components/shared/invoice-form-component/invoice.form.component.html
+++ b/Spa/src/app/components/shared/invoice-form-component/invoice.form.component.html
@@ -58,6 +58,7 @@
             label="Client's Email"
             placeholder="alexgrim@somemail.com"
             controlName="clientEmail"
+            type="email"
           >
           </input-field>
           <input-field
